[gd_scene load_steps=18 format=3 uid="uid://jfigeo12aebp"]

[ext_resource type="Texture2D" uid="uid://di0sdgv3mhnu7" path="res://kirbySprites/enemy/bonehead.png" id="1_ep1k6"]
[ext_resource type="Script" path="res://enemy scenes/flyingenemies/bonehead/bonehead.gd" id="1_fdqcp"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_uh2er"]
size = Vector2(14, 14)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ujodb"]
size = Vector2(15, 15)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ikp8u"]
size = Vector2(48, 14)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_c550a"]
size = Vector2(16, 165)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_la7fr"]
size = Vector2(130, 245)

[sub_resource type="AtlasTexture" id="AtlasTexture_frrpv"]
atlas = ExtResource("1_ep1k6")
region = Rect2(24, 0, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_3clbi"]
atlas = ExtResource("1_ep1k6")
region = Rect2(48, 0, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_75wpo"]
atlas = ExtResource("1_ep1k6")
region = Rect2(72, 0, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_f1svs"]
atlas = ExtResource("1_ep1k6")
region = Rect2(96, 0, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_rlhpp"]
atlas = ExtResource("1_ep1k6")
region = Rect2(120, 0, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_455sr"]
atlas = ExtResource("1_ep1k6")
region = Rect2(144, 0, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_85q3t"]
atlas = ExtResource("1_ep1k6")
region = Rect2(168, 0, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_kyeqt"]
atlas = ExtResource("1_ep1k6")
region = Rect2(0, 0, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_m05qb"]
atlas = ExtResource("1_ep1k6")
region = Rect2(96, 0, 24, 24)

[sub_resource type="SpriteFrames" id="SpriteFrames_cfmxj"]
animations = [{
"frames": [{
"duration": 1.2,
"texture": SubResource("AtlasTexture_frrpv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3clbi")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_frrpv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_75wpo")
}],
"loop": true,
"name": &"default",
"speed": 8.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_f1svs")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rlhpp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_455sr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_85q3t")
}],
"loop": true,
"name": &"fall",
"speed": 7.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_kyeqt")
}],
"loop": true,
"name": &"hurt",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_m05qb")
}],
"loop": true,
"name": &"idle",
"speed": 5.0
}]

[node name="bonehead" type="CharacterBody2D" groups=["mobs", "suckable"]]
collision_layer = 2
floor_stop_on_slope = false
floor_constant_speed = true
floor_max_angle = 0.0
floor_snap_length = 0.0
script = ExtResource("1_fdqcp")

[node name="hitbox" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_uh2er")
debug_color = Color(0.890196, 0.317647, 0.196078, 0.419608)

[node name="hitDetect" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="hitDetect"]
position = Vector2(0.083992, -0.000564575)
shape = SubResource("RectangleShape2D_ujodb")

[node name="walldetectX" type="Area2D" parent="."]
collision_layer = 3
collision_mask = 3

[node name="CollisionShape2D" type="CollisionShape2D" parent="walldetectX"]
position = Vector2(0, -1)
shape = SubResource("RectangleShape2D_ikp8u")
debug_color = Color(0.686275, 0.494118, 0.172549, 0.419608)

[node name="playerDetect" type="Area2D" parent="."]
collision_layer = 3
collision_mask = 3

[node name="CollisionShape2D" type="CollisionShape2D" parent="playerDetect"]
position = Vector2(0, 90.5)
shape = SubResource("RectangleShape2D_c550a")
debug_color = Color(0.701961, 0.47451, 0.356863, 0.419608)

[node name="hideDetect" type="Area2D" parent="."]
collision_layer = 3
collision_mask = 3

[node name="CollisionShape2D" type="CollisionShape2D" parent="hideDetect"]
position = Vector2(0, 50.5)
shape = SubResource("RectangleShape2D_la7fr")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_cfmxj")
animation = &"hurt"
autoplay = "idle"

[node name="fliptimer" type="Timer" parent="."]
wait_time = 3.0
autostart = true

[connection signal="body_entered" from="walldetectX" to="." method="_on_walldetect_x_body_entered" flags=18]
[connection signal="body_entered" from="playerDetect" to="." method="_on_player_detect_body_entered"]
[connection signal="body_entered" from="hideDetect" to="." method="_on_hide_detect_body_entered"]
[connection signal="timeout" from="fliptimer" to="." method="_on_fliptimer_timeout" flags=18]
